--- a/uploads/core/templates/core/home.html
+++ b/uploads/core/templates/core/home.html
@@ -5,9 +5,12 @@
     <li>
       <a href="{% url 'simple_upload' %}">Simple Upload</a>
     </li>
-    <li>
-    </li>
   </ul>
+<form action="https://www.google.co.in/maps/search/ngo/@12.9539226,77.6309387,11z/data=!3m1!4b1">
+    <input type="NearbyNgo" value="Go to Google" />
+</form>' %}
+    
+  
 
   <p>Uploaded files:</p>
   <ul>
