--- a/uploads/core/templates/core/home.html
+++ b/uploads/core/templates/core/home.html
@@ -1,24 +1,41 @@
 {% extends 'base.html' %}
+<head>
+
+<style>
+{super.style}<link rel="stylesheet" href="styles.css" type="text/css"/>
+</style>
+</head>
 
 {% block content %}
-  <ul>
-    <li>
-      <a href="{% url 'simple_upload' %}">Simple Upload</a>
-    </li>
-  </ul>
-<form action="https://www.google.co.in/maps/search/ngo/@12.9539226,77.6309387,11z/data=!3m1!4b1">
-    <input type="NearbyNgo" value="Go to Google" />
-</form>' %}
-    
-  
+<div id="topbar" style="height:150px;width:700vw ">
+  <img src = "/static/ahar logo.png" height = 100%>
+</div>
+<div style="background-color:#00a550;height:20px;margin-top:0px;margin-bottom:0px  ">
+    <p style="color: white;padding-left: 10px;margin: 0px">Stop to save on your food outlay</p>
+</div>
+<div style = "height:800px;background-image: url(/static/food_save.jpg);opacity =0.5 ;background-position: center;margin-top:0px " >
+      <div style="margin: 0px;padding-top:200px;padding-left: 350px;display: flex;justify-content: center; ">
+        <span style = "font-size: 55px;color: white"> Want to Prevent Food Wastage?</span>
+        &nbsp;
+        <img src="http://www.animatedimages.org/data/media/111/animated-arrow-image-0270.gif" border="0" alt="animated-arrow-image-0270" style="padding-top: 20px;padding-left: 10px" />
+        &nbsp;
+        <a href="{% url 'simple_upload' %}">
+          <button style="border-radius: 5px;font-size: 20px;margin-top:25px  ">Click Here</button>
+        </a>
+      </div>
+      <div style="margin-top:250px;padding-left: 20px">
+      <span style="font-size: 45px;color: white"> Have extra food? Help someone&#x263A;</span>
+      <span><img src="http://www.animatedimages.org/data/media/111/animated-arrow-image-0270.gif" border="0" alt="animated-arrow-image-0270" style="padding-top: 25px;padding-left: 10px;" /></span>
+      
+      <a href="https://www.google.co.in/maps/search/ngo" target="_blank">
+        <button style="border-radius:3px;font-size:25px;margin-bottom: 23px; ">Find a NGO nearby </button>
+      </a>
 
-  <p>Uploaded files:</p>
-  <ul>
-    {% for obj in documents %}
-      <li>
-        <a href="{{ obj.document.url }}">{{ obj.document.name }}</a>
-        <small>(Uploaded at: {{ obj.uploaded_at }})</small>
-      </li>
-    {% endfor %}
-  </ul>
+      </div>
+</div>
+<div style="background-color:#00a550;height:20px;margin-top:0px;margin-bottom:0px;display: flex;justify-content: center;  ">
+    <span><p style="color: white;padding-left: 10px;margin: 0px">&copy;Code_Breakers</p></span>
+</div>
+
+    
 {% endblock %}
